# kvik

./: .clang-format  .gitignore  LICENSE  README.md
.github/workflows/: test.yml
include/kvik/: client.hpp  client_config.hpp  errors.hpp  layers.hpp  limits.hpp  local_addr.hpp  local_addr_mac.hpp  local_broker.hpp  local_msg.hpp  local_msg_id_cache.hpp  local_peer.hpp  log_level.hpp  logger.hpp  node.hpp  node_config.hpp  node_types.hpp  nonce_cache.hpp  pub_sub_struct.hpp  remote_msg.hpp  timer.hpp  version.hpp  wildcard_trie.hpp
priv_include/kvik/: chacha20.hpp  logger.hpp  random.hpp
priv_include/kvik/espidf/: mac.hpp
src/common/: client.cpp  local_addr_mac.cpp  local_broker.cpp  local_msg.cpp  local_msg_id_cache.cpp  local_peer.cpp  node.cpp  nonce_cache.cpp  pub_sub_struct.cpp  remote_msg.cpp  timer.cpp
src/espidf/: log_level.cpp  logger.cpp  random.cpp
src/linux/: log_level.cpp  logger.cpp  random.cpp
test/: CMakeLists.txt
test/include/kvik_testing/: dummy_local_layer.hpp  dummy_node.hpp  local_msg_prep.hpp
test/src/: local_msg_prep.cpp  main.cpp
test/tests/: client.cpp  errors.cpp  local_addr.cpp  local_addr_mac.cpp  local_broker.cpp  local_msg.cpp  local_msg_id_cache.cpp  local_peer.cpp  node.cpp  nonce_cache.cpp  pub_sub_struct.cpp  random.cpp  remote_msg.cpp  timer.cpp  version.cpp  wildcard_trie.cpp
